cmake_minimum_required(VERSION 3.12)
project(database_xcodeproj)

set(CMAKE_CXX_STANDARD 14)

add_executable(database_xcodeproj
        project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
        project.xcworkspace/xcuserdata/mykolamedynsky.xcuserdatad/UserInterfaceState.xcuserstate
        project.xcworkspace/contents.xcworkspacedata
        xcuserdata/mykolamedynsky.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
        xcuserdata/mykolamedynsky.xcuserdatad/xcschemes/xcschememanagement.plist
        project.pbxproj)
